re-style suggestion section
- position below the keyboard
- introduce 'USE' button

--- a/index.html
+++ b/index.html
@@ -49,14 +49,6 @@
             <div class="guessLetter"></div>
             <div class="guessLetter"></div>
         </div>
-        <div class="suggestionHeading"><i class="far fa-lightbulb lightbulbIcon"></i>Suggestion</div>
-        <div class="suggestedGuess">
-            <div class="guessLetter">S</div>
-            <div class="guessLetter">I</div>
-            <div class="guessLetter">N</div>
-            <div class="guessLetter">C</div>
-            <div class="guessLetter">E</div>
-        </div>
     </div>
     <div class="keyboard">
         <div class="keyboardRow">
@@ -91,6 +83,18 @@
             <div class="key hint-present">N</div>
             <div class="key">M</div>
             <div class="key key-backspace"><i class="fas fa-backspace"></i></div>
+        </div>
+    </div>
+    <div class="suggestion">
+        <div class="suggestionHeading">
+            <i class="suggestionIcon far fa-lightbulb"></i>Suggestion<span class="suggestionButton">USE</span>
+        </div>
+        <div class="suggestionWord">
+            <div class="guessLetter">S</div>
+            <div class="guessLetter">I</div>
+            <div class="guessLetter">N</div>
+            <div class="guessLetter">C</div>
+            <div class="guessLetter">E</div>
         </div>
     </div>
     <script src="scripts.js"></script>
