--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
     </div>
     <div class="guesses">
         <div class="guess">
-            <div class="guessLetter hint-absent">A</div>
-            <div class="guessLetter hint-absent">U</div>
-            <div class="guessLetter hint-absent">D</div>
-            <div class="guessLetter hint-present">I</div>
-            <div class="guessLetter hint-absent">O</div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
         </div>
         <div class="guess">
-            <div class="guessLetter hint-absent">T</div>
-            <div class="guessLetter hint-absent">H</div>
-            <div class="guessLetter hint-present">I</div>
-            <div class="guessLetter hint-present">N</div>
-            <div class="guessLetter hint-absent">K</div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
         </div>
         <div class="guess">
-            <div class="guessLetter hint-present">N</div>
-            <div class="guessLetter hint-correct">I</div>
-            <div class="guessLetter hint-present">C</div>
-            <div class="guessLetter hint-present">E</div>
-            <div class="guessLetter hint-absent">R</div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
         </div>
         <div class="guess">
-            <div class="guessLetter hint-required hintButton">S</div>
-            <div class="guessLetter hint-required hintButton">I</div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
             <div class="guessLetter"></div>
             <div class="guessLetter"></div>
             <div class="guessLetter"></div>
@@ -52,37 +52,37 @@
     </div>
     <div class="keyboard">
         <div class="keyboardRow">
-            <div class="key">Q</div>
-            <div class="key">W</div>
-            <div class="key hint-present">E</div>
-            <div class="key hint-absent">R</div>
-            <div class="key hint-absent">T</div>
-            <div class="key">Y</div>
-            <div class="key hint-absent">U</div>
-            <div class="key hint-correct">I</div>
-            <div class="key hint-absent">O</div>
-            <div class="key">P</div>
+            <div class="key" data-key="Q">Q</div>
+            <div class="key" data-key="W">W</div>
+            <div class="key" data-key="E">E</div>
+            <div class="key" data-key="R">R</div>
+            <div class="key" data-key="T">T</div>
+            <div class="key" data-key="Y">Y</div>
+            <div class="key" data-key="U">U</div>
+            <div class="key" data-key="I">I</div>
+            <div class="key" data-key="O">O</div>
+            <div class="key" data-key="P">P</div>
         </div>
         <div class="keyboardRow">
-            <div class="key hint-absent">A</div>
-            <div class="key">S</div>
-            <div class="key hint-absent">D</div>
-            <div class="key">F</div>
-            <div class="key">G</div>
-            <div class="key hint-absent">H</div>
-            <div class="key">J</div>
-            <div class="key hint-absent">K</div>
-            <div class="key">L</div>
+            <div class="key" data-key="A">A</div>
+            <div class="key" data-key="S">S</div>
+            <div class="key" data-key="D">D</div>
+            <div class="key" data-key="F">F</div>
+            <div class="key" data-key="G">G</div>
+            <div class="key" data-key="H">H</div>
+            <div class="key" data-key="J">J</div>
+            <div class="key" data-key="K">K</div>
+            <div class="key" data-key="L">L</div>
         </div>
         <div class="keyboardRow">
-            <div class="key">Z</div>
-            <div class="key">X</div>
-            <div class="key hint-present">C</div>
-            <div class="key">V</div>
-            <div class="key">B</div>
-            <div class="key hint-present">N</div>
-            <div class="key">M</div>
-            <div class="key key-backspace"><i class="fas fa-backspace"></i></div>
+            <div class="key" data-key="Z">Z</div>
+            <div class="key" data-key="X">X</div>
+            <div class="key" data-key="C">C</div>
+            <div class="key" data-key="V">V</div>
+            <div class="key" data-key="B">B</div>
+            <div class="key" data-key="N">N</div>
+            <div class="key" data-key="M">M</div>
+            <div class="key key-backspace" data-key="BACKSPACE"><i class="fas fa-backspace"></i></div>
         </div>
     </div>
     <div class="suggestion">
@@ -90,11 +90,11 @@
             <i class="suggestionIcon far fa-lightbulb"></i>Suggestion<span class="suggestionButton">USE</span>
         </div>
         <div class="suggestionWord">
-            <div class="guessLetter">S</div>
-            <div class="guessLetter">I</div>
-            <div class="guessLetter">N</div>
-            <div class="guessLetter">C</div>
-            <div class="guessLetter">E</div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
+            <div class="guessLetter"></div>
         </div>
     </div>
     <script src="scripts.js"></script>
