--- a/index.html
+++ b/index.html
@@ -52,42 +52,42 @@
     </div>
     <div class="keyboard">
         <div class="keyboardRow">
-            <div class="key" data-key="Q">Q</div>
-            <div class="key" data-key="W">W</div>
-            <div class="key" data-key="E">E</div>
-            <div class="key" data-key="R">R</div>
-            <div class="key" data-key="T">T</div>
-            <div class="key" data-key="Y">Y</div>
-            <div class="key" data-key="U">U</div>
-            <div class="key" data-key="I">I</div>
-            <div class="key" data-key="O">O</div>
-            <div class="key" data-key="P">P</div>
+            <div class="key" data-key="q">Q</div>
+            <div class="key" data-key="w">W</div>
+            <div class="key" data-key="e">E</div>
+            <div class="key" data-key="r">R</div>
+            <div class="key" data-key="t">T</div>
+            <div class="key" data-key="y">Y</div>
+            <div class="key" data-key="u">U</div>
+            <div class="key" data-key="i">I</div>
+            <div class="key" data-key="o">O</div>
+            <div class="key" data-key="p">P</div>
         </div>
         <div class="keyboardRow">
-            <div class="key" data-key="A">A</div>
-            <div class="key" data-key="S">S</div>
-            <div class="key" data-key="D">D</div>
-            <div class="key" data-key="F">F</div>
-            <div class="key" data-key="G">G</div>
-            <div class="key" data-key="H">H</div>
-            <div class="key" data-key="J">J</div>
-            <div class="key" data-key="K">K</div>
-            <div class="key" data-key="L">L</div>
+            <div class="key" data-key="a">A</div>
+            <div class="key" data-key="s">S</div>
+            <div class="key" data-key="d">D</div>
+            <div class="key" data-key="f">F</div>
+            <div class="key" data-key="g">G</div>
+            <div class="key" data-key="h">H</div>
+            <div class="key" data-key="j">J</div>
+            <div class="key" data-key="k">K</div>
+            <div class="key" data-key="l">L</div>
         </div>
         <div class="keyboardRow">
-            <div class="key" data-key="Z">Z</div>
-            <div class="key" data-key="X">X</div>
-            <div class="key" data-key="C">C</div>
-            <div class="key" data-key="V">V</div>
-            <div class="key" data-key="B">B</div>
-            <div class="key" data-key="N">N</div>
-            <div class="key" data-key="M">M</div>
+            <div class="key" data-key="z">Z</div>
+            <div class="key" data-key="x">X</div>
+            <div class="key" data-key="c">C</div>
+            <div class="key" data-key="v">V</div>
+            <div class="key" data-key="b">B</div>
+            <div class="key" data-key="n">N</div>
+            <div class="key" data-key="m">M</div>
             <div class="key key-backspace" data-key="BACKSPACE"><i class="fas fa-backspace"></i></div>
         </div>
     </div>
     <div class="suggestion">
         <div class="suggestionHeading">
-            <i class="suggestionIcon far fa-lightbulb"></i>Suggestion<span class="suggestionButton">USE</span>
+            <i class="suggestionIcon far fa-lightbulb"></i>Suggestion<span id='useButton' class="suggestionButton disabled">USE</span>
         </div>
         <div class="suggestionWord">
             <div class="guessLetter"></div>
