--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <i class="fas fa-redo"></i>
+        <i id="resetButton" class="resetButton fas fa-redo"></i>
         <div class="heading">WORDLE HELPER</div>
         <i class="fas fa-cog"></i>
     </div>
