- introduced parcel for bundling and TypeScript compilation - introduced jest for unit tests - extracted a WordSuggester class to suggest words and wrote unit tests - fixed a few cases where incorrect word suggestions were being made

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Wordle Helper</title>
     <link href="font_awesome/css/all.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    <script type="module" src="app.ts"></script>
 </head>
 <body>
     <div class="header">
@@ -97,6 +98,5 @@
             <div class="guessLetter"></div>
         </div>
     </div>
-    <script src="scripts.js"></script>
 </body>
 </html>
